HYLIBRA-39: fixing whitespace in facets

--- a/public/stylesheets/uva/styles.css
+++ b/public/stylesheets/uva/styles.css
@@ -200,7 +200,7 @@ table#file_assets {
 }
 
 #facets div {
-
+  background-color: #E5EBFD;
 }
 
 #facets div h3 {
